# api-ec2/api/start_ec2.py
@@ -3,45 +3,29 @@
 
 import sys
 import os
+import json
 import time
-import argparse
+import logging
 import boto3.ec2
 from botocore.exceptions import ClientError
+from flask import Flask, jsonify, request, json
 
-VERSION = '1.5.0'
-ec2 = boto3.client('ec2')
-
-
-class Mem:
-    """
-    Global Class Pattern:
-    Declare globals here.
-    """
-    instance_id = ""
-
-def start(request):
+#def status(request):
+def start(id):
     """
     This code is from Amazon's EC2 example.
     Do a dryrun first to verify permissions.
-    Try to start the EC2 instance.
+    Try to get the EC2 instance status.
     """
-    print("------------------------------")
-    print("Try to start the EC2 instance.")
-    print("------------------------------")
-
+    
     try:
-        print("Start dry run...")
-        ec2.start_instances(InstanceIds=[Mem.instance_id], DryRun=True)
-    except ClientError as e:
-        if 'DryRunOperation' not in str(e):
-            raise
-
-    # Dry run succeeded, run start_instances without dryrun
-    try:
-        print("Start instance without dry run...")
-        response = ec2.start_instances(InstanceIds=[Mem.instance_id], DryRun=False)
-        print(response)
-        fetch_public_ip()
+        region_name_var=os.environ.get("REGION_NAME")  #Recover region name from env variables
+        ec2 = boto3.client('ec2', region_name=region_name_var)
+        response = ec2.start_instances(InstanceIds=[id], DryRun=False)
+        if (response):
+            return jsonify(response)
+        else:
+            resp = {'message': 'fail'}
+            return jsonify(resp)
     except ClientError as e:
         print(e)
-
